trying to fix image border gap on chrome

--- a/index.css
+++ b/index.css
@@ -73,6 +73,8 @@ main {
     box-sizing: border-box;
     border: 3px solid #000;
     background-color: #000;
+    font-size:0;
+    object-fit: contain;
 }
 #text {
     margin-top: min(3vh,15px);
